[FIX] web_studio: align arrows in report designer tag tree
Before this commit, right arrows on the report designer sidebar were
not aligned properly due to dynamic width of the button content.

This commit fixes the issue by absolutely placing the arrow on right
side.

task-2061415

closes odoo/enterprise#5565

--- a/web_studio/static/src/scss/report_editor_sidebar.scss
+++ b/web_studio/static/src/scss/report_editor_sidebar.scss
@@ -109,6 +109,8 @@
                         }
                         i.fa-angle-left {
                             transition: transform .3s;
+                            position: absolute;
+                            right: 1.5rem;
                         }
                     }
                 }
